finish files page

--- a/pages/files.html
+++ b/pages/files.html
@@ -96,34 +96,350 @@
       </div>
       <section class="main-content p-10 p-8-mobile">
         <h1 class="main-title">Files</h1>
-        <div class="grid-flex-container d-flex gap-15 column-mobile">
-          <div class="files main-wrapper mt-30 d-grid grow-1">
+        <div class="grid-flex-container mt-30  d-flex gap-15 column-mobile">
+          <div class="files main-wrapper d-grid grow-1">
             <div class="file bg-white rad-10 p-10 p-relative">
-              <div>img</div>
-              <div>img</div>
-              <div>img</div>
-              <div>img</div>
-              <div>img</div>
-              <div>img</div>
-              <div>img</div>
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/pdf.svg" alt="" />
+                <span class="file-name d-block">my-file.pdf</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
             </div>
             <div class="file bg-white rad-10 p-10 p-relative">
-              dasd
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/avi.svg" alt="" />
+                <span class="file-name d-block">my-file.avi</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
             </div>
             <div class="file bg-white rad-10 p-10 p-relative">
-              dasd
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/dll.svg" alt="" />
+                <span class="file-name d-block">my-file.dll</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
             </div>
             <div class="file bg-white rad-10 p-10 p-relative">
-              dasd
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/eps.svg" alt="" />
+                <span class="file-name d-block">my-file.eps</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
             </div>
             <div class="file bg-white rad-10 p-10 p-relative">
-              dasd
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/psd.svg" alt="" />
+                <span class="file-name d-block">my-file.psd</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/png.svg" alt="" />
+                <span class="file-name d-block">my-file.png</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/sql.svg" alt="" />
+                <span class="file-name d-block">my-file.sql</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/txt.svg" alt="" />
+                <span class="file-name d-block">my-file.txt</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/zip.svg" alt="" />
+                <span class="file-name d-block">my-file.zip</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/psd.svg" alt="" />
+                <span class="file-name d-block">my-file.psd</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/txt.svg" alt="" />
+                <span class="file-name d-block">my-file.txt</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/png.svg" alt="" />
+                <span class="file-name d-block">my-file.png</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/dll.svg" alt="" />
+                <span class="file-name d-block">my-file.dll</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/zip.svg" alt="" />
+                <span class="file-name d-block">my-file.zip</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/sql.svg" alt="" />
+                <span class="file-name d-block">my-file.sql</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/pdf.svg" alt="" />
+                <span class="file-name d-block">my-file.pdf</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/avi.svg" alt="" />
+                <span class="file-name d-block">my-file.avi</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/txt.svg" alt="" />
+                <span class="file-name d-block">my-file.txt</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/png.svg" alt="" />
+                <span class="file-name d-block">my-file.png</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/dll.svg" alt="" />
+                <span class="file-name d-block">my-file.dll</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/eps.svg" alt="" />
+                <span class="file-name d-block">my-file.eps</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/dll.svg" alt="" />
+                <span class="file-name d-block">my-file.dll</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/zip.svg" alt="" />
+                <span class="file-name d-block">my-file.zip</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/sql.svg" alt="" />
+                <span class="file-name d-block">my-file.sql</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
+            </div>
+            <div class="file bg-white rad-10 p-10 p-relative">
+              <i class="fa-solid fa-download p-absolute fs-18 download-icon"></i>
+              <div class="icon txt-c mt-15 mb-15">
+                <img class="mb-10" src="../images/pdf.svg" alt="" />
+                <span class="file-name d-block">my-file.pdf</span>
+              </div>
+              <span class="uploader-name c-gray">Elzero</span>
+              <div class="between-flex pt-10 bt-eee mt-15">
+                <span class="date c-gray fs-14 ">20/06/2020</span>
+                <span class="file-size c-gray fs-14 ">5.26MB</span>
+              </div>
             </div>
           </div>
           <div class="upload-file bg-white rad-10 p-10">
-            dasda
+            <h2 class="file-stat-title mb-15 txt-c-mobile">
+              Files Statistics
+            </h2>
+            <div class="file-stat d-flex align-center p-5 b-eee mb-15 column-mobile gap-5-mobile">
+              <i class="fa-regular fa-file-pdf fa-lg center-flex mr-5 c-blue blue icon"></i>
+              <div class="text  txt-c-mobile grow-1">
+                <span class="file-type mb-5 fw-500 d-block fs-15">PDF Files</span>
+                <span class="file-num c-gray fs-13">136 Files</span>
+              </div>
+              <span class="file-size c-gray fs-14">6.3GB</span>
+            </div>
+            <div class="file-stat d-flex align-center p-5 b-eee mb-15 column-mobile gap-5-mobile">
+              <i class="fa-regular fa-file-image fa-lg center-flex mr-5 c-green green icon"></i>
+              <div class="text  txt-c-mobile grow-1">
+                <span class="file-type mb-5 fw-500 d-block fs-15">Images</span>
+                <span class="file-num c-gray fs-13">115 Files</span>
+              </div>
+              <span class="file-size c-gray fs-14">3.5GB</span>
+            </div>
+            <div class="file-stat d-flex align-center p-5 b-eee mb-15 column-mobile gap-5-mobile">
+              <i class="fa-regular fa-file-word fa-lg center-flex mr-5 c-red red icon"></i>
+              <div class="text  txt-c-mobile grow-1">
+                <span class="file-type mb-5 fw-500 d-block fs-15">Word Files</span>
+                <span class="file-num c-gray fs-13">150 Files</span>
+              </div>
+              <span class="file-size c-gray fs-14">3.2GB</span>
+            </div>
+            <div class="file-stat d-flex align-center p-5 b-eee  column-mobile gap-5-mobile">
+              <i class="fa-solid fa-file-csv fa-lg center-flex mr-5 c-orange orange icon"></i>
+              <div class="text  txt-c-mobile grow-1">
+                <span class="file-type mb-5 fw-500 d-block fs-15">CSV Files</span>
+                <span class="file-num c-gray fs-13">99 Files</span>
+              </div>
+              <span class="file-size c-gray fs-14">2.9GB</span>
+            </div>
+            <a href="#" class="upload btn-shape bg-blue trans-hov-fx d-block w-fit mt-15 mlr-auto">
+              <i class="fa-solid fa-angles-up mr-5 icon"></i>
+              Upload
+            </a>
           </div>
-
         </div>
       </section>
     </main>
