--- a/pages/plans.html
+++ b/pages/plans.html
@@ -15,10 +15,10 @@
   <!-- Main css file -->
   <link rel="stylesheet" href="../css/master.css" />
   <!-- Google Fonts -->
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
-    rel="stylesheet" /> -->
+    rel="stylesheet" />
 </head>
 
 <body>
@@ -97,8 +97,176 @@
       <section class="main-content p-10 p-8-mobile">
         <h1 class="main-title">Plans</h1>
         <div class="plans main-wrapper mt-30 d-grid">
-          <div class="plan bg-white rad-10 p-10">
-            
+          <div class="plan bg-white rad-6 p-20">
+            <div class="head p-15 bg-green green txt-c c-white">
+              <h3>Free</h3>
+              <div class="price w-fit mlr-auto txt-c p-relative">
+                <span class="fs-30 p-absolute">$</span>
+                0.00
+              </div>
+            </div>
+            <ul class="features-list">
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Acess All Text Lessons</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Acess All Videos Lessons</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Appear On Leaderboard</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-xmark fa-fw"></i>
+                <span>Browse Content Without Ads</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-xmark fa-fw"></i>
+                <span>Access All Assignments</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-xmark fa-fw"></i>
+                <span>Get Daily Prizes</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-xmark fa-fw"></i>
+                <span>Earn Certificate</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-xmark fa-fw"></i>
+                <span>1 GB Space For Hosting Files</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-xmark fa-fw"></i>
+                <span>Access Badge System</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+            </ul>
+            <a href="#" class="btn-shape bg-green w-fit mlr-auto d-block mt-16">Join</a>
+          </div>
+          <div class="plan bg-white rad-6 p-20">
+            <div class="head p-15 bg-blue blue txt-c c-white">
+              <h3>Basic</h3>
+              <div class="price w-fit mlr-auto txt-c p-relative">
+                <span class="fs-30 p-absolute">$</span>
+                7.99
+              </div>
+            </div>
+            <ul class="features-list">
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Acess All Text Lessons</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Acess All Videos Lessons</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Appear On Leaderboard</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Browse Content Without Ads</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Access All Assignments</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Get Daily Prizes</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Earn Certificate</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-xmark fa-fw"></i>
+                <span>1 GB Space For Hosting Files</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-xmark fa-fw"></i>
+                <span>Access Badge System</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+            </ul>
+            <a href="#" class="btn-shape bg-blue w-fit mlr-auto d-block mt-16">Join</a>
+          </div>
+          <div class="plan bg-white rad-6 p-20">
+            <div class="head p-15 bg-orange orange txt-c c-white">
+              <h3>Premium</h3>
+              <div class="price w-fit mlr-auto txt-c p-relative">
+                <span class="fs-30 p-absolute">$</span>
+                19.99
+              </div>
+            </div>
+            <ul class="features-list">
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Acess All Text Lessons</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Acess All Videos Lessons</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Appear On Leaderboard</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Browse Content Without Ads</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Access All Assignments</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Get Daily Prizes</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Earn Certificate</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>1 GB Space For Hosting Files</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-check fa-fw yes"></i>
+                <span>Access Badge System</span>
+                <i class="fa-solid fa-circle-info help"></i>
+              </li>
+            </ul>
+            <p class="txt-c c-gray mb-0">This Is Your Current Plan</p>
           </div>
 
         </div>
