slight fixes on index page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <img src="images/welcome.png" alt="" class="hide-mobile" />
             </div>
             <img src="images/avatar.png" alt="" class="rad-circle" />
-            <div class="body pt-20 pb-20 d-flex align-center d-block-mobile">
+            <div class="body pt-20 pb-20 d-flex align-center d-block-mobile txt-c">
               <div class="grow-1">
                 <div class="mb-5">Osama Elzero</div>
                 <span class="c-gray">Developer</span>
